# itasc_solvers

./: .gitignore  README  rosdoc.yaml  stack.xml
wdls_prior_vel_solver/: CMakeLists.txt  manifest.xml
wdls_prior_vel_solver/cmake/: pkg-config.cmake
wdls_prior_vel_solver/src/: HQPSolver.cpp  HQPSolver.hpp  HQPVelSolver.cpp  HQPVelSolver.hpp  WDLSPriorVelSolver.cpp  WDLSPriorVelSolver.hpp
wdls_prior_vel_solver/test/: CMakeLists.txt
